[metadata]
name = tk_apis
version = 0.2.5
author = Jennifer Brussow
author_email = jbrussow@terakeet.com
description = Wrappers for some common SERP ingestion APIs we use at TK
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/terakeet/tk_apis
project_urls =
    Bug Tracker = https://github.com/terakeet/tk_apis/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = tk_apis
python_requires = >=3.6
install_requires =
    requests==2.27.1
    google-search-results
    pandas==1.4.2
    numpy==1.22.3
